Fix dropdown flicker

--- a/app/assets/stylesheets/moj/_forms.scss
+++ b/app/assets/stylesheets/moj/_forms.scss
@@ -250,3 +250,9 @@ button.search {
     left: 0;
   }
 }
+
+.js-enabled {
+  select.autocomplete {
+    @include visually-hidden;
+  }
+}
